<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/splash_title_margin_start"
            android:layout_marginTop="@dimen/splash_title_margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/signup_title"
            android:textColor="@color/splash_text_color"
            android:textSize="@dimen/splash_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/signup_subtitle_margin"
            android:layout_marginTop="@dimen/signup_subtitle_margin"
            android:text="@string/signup_subtitle2"
            app:layout_constraintBottom_toBottomOf="@+id/txt_signup_title"
            app:layout_constraintStart_toEndOf="@+id/txt_signup_title"
            app:layout_constraintTop_toTopOf="@+id/txt_signup_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/splash_title_margin_top"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="@color/splash_text_color"
            android:textSize="@dimen/splash_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_doorno"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/splash_title_margin_start"
            android:layout_marginTop="@dimen/splash_title_margin_top"
            android:layout_marginEnd="@dimen/splash_title_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_doorno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/doorno"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_street"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/splash_title_margin_start"
            android:layout_marginTop="@dimen/signup_subtitle_margin"
            android:layout_marginEnd="@dimen/splash_title_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_doorno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_area"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/splash_title_margin_start"
            android:layout_marginTop="@dimen/signup_subtitle_margin"
            android:layout_marginEnd="@dimen/splash_title_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_street">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/area"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/splash_title_margin_start"
            android:layout_marginTop="@dimen/signup_subtitle_margin"
            android:layout_marginEnd="@dimen/splash_title_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_area">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_pin"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/splash_title_margin_start"
            android:layout_marginTop="@dimen/signup_subtitle_margin"
            android:layout_marginEnd="@dimen/splash_title_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_city">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pincodenumber"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/splash_title_margin_start"
            android:layout_marginTop="@dimen/signup_subtitle_margin"
            android:fontFamily="sans-serif"
            android:text="@string/termsand_conditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_pin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/splash_title_margin_top"
            android:layout_marginBottom="@dimen/splash_title_margin_top"
            android:background="@color/splash_button_color"
            android:gravity="center"
            android:padding="@dimen/button_padding"
            android:text="@string/signup_title"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chk_accept" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>