<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/splash_title_margin_start"
            android:layout_marginTop="@dimen/splash_title_margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/signin"
            android:textColor="@color/splash_text_color"
            android:textSize="@dimen/splash_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/splash_title_margin_start"
            android:layout_marginTop="@dimen/signup_margin_main_top"
            android:layout_marginEnd="@dimen/splash_title_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_arrow_downward_24"
                android:hint="@string/mobile"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_otp"
            android:background="#BDBDBD"
            android:padding="@dimen/padding_10"
            android:layout_width="@dimen/signup_edittext_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/signup_subtitle_margin"
            android:hint="@string/enter_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_phone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_next"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/splash_title_margin_top"
            android:layout_marginBottom="@dimen/splash_title_margin_top"
            android:background="@color/splash_button_color"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="@dimen/button_padding"
            android:text="@string/signin_button_text"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_otp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>